fixed calender on mobile

--- a/client/src/Components/App/MainAppContent/Calander/Calender.css
+++ b/client/src/Components/App/MainAppContent/Calander/Calender.css
@@ -5,6 +5,7 @@
     box-shadow: 0px 0px 5px 1px #c1c9c9;
     display: grid;
     justify-items: center;
+    padding-top: 20px;
 }
 
 .calender-container-open {
